# email_sender

./: .env  .env.example  Dockerfile  README.md  pyproject.toml  railway.json
app/: main.py
app/adapters/: adapter_send_email.py
app/config/: config.py
app/endpoints/: router_send_email.py
app/models/: schema_send_email.py
config/: config.py
tests/: test_main.py
